2008-08-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 546020 – Wrap GFile.create_async

	* tests/test_gio.py:
	* gio/gfile.override:
	* gio/gio.defs:
	Wrap GFile.create_async with docs and test

2008-08-02  Johan Dahlin  <johan@gnome.org>

	* codegen/docgen.py:
	Remove SGML support, require python 2.4, modernize,
	PEP-8ify. Make it run on gio.

	* codegen/definitions.py:
	Make property iterable

	* gio/gio.defs:
	Include the gio-types.defs file.

2008-08-02  Johan Dahlin  <johan@gnome.org>

	* glib/glibmodule.c (pyglib_set_prgname):
	* glib/pygoptioncontext.c (pyg_option_context_init),
	(pyg_option_context_set_help_enabled),
	(pyg_option_context_set_ignore_unknown_options),
	(pyg_option_context_set_main_group),
	(pyg_option_context_add_group):
	* glib/pygoptiongroup.c (arg_func), (pyg_option_group_add_entries),
	(pyg_option_group_set_translation_domain),
	(pyg_option_group_compare), (pyglib_option_group_register_types):
	Fix compilation warnings, clean up style and indentation.

2008-08-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 545959 – Wrap GFile.append_to_async

	* tests/test_gio.py:
	* gio/gfile.override:
	* gio/gio.defs:
	Wrap GFile.append_to_async with docs and test

2008-08-02  Johan Dahlin  <johan@gnome.org>

	* gio/gfileinfo.override:
	* gio/gio.override:
	* glib/glibmodule.c (pyglib_get_current_time):
	* glib/pyglib.c (pyglib_float_from_timeval):
	* glib/pyglib.h:
	Add pyglib_float_from_timeval and use it

2008-08-02  Johan Dahlin  <johan@gnome.org>

	* docs/Makefile.am:
	* docs/reference/pyglib-constants.xml:
	* docs/reference/pyglib-functions.xml:
	* docs/reference/pyglib-maincontext.xml:
	* docs/reference/pyglib-mainloop.xml:
	* docs/reference/pygobject-classes.xml:
	* docs/reference/pygobject-constants.xml:
	* docs/reference/pygobject-functions.xml:
	* docs/reference/pygobject-maincontext.xml:
	* docs/reference/pygobject-mainloop.xml:
	Separate the glib and gobject bindings in the manual.
