@@ -119,24 +119,24 @@ pyglib_gil_state_release(PyGILState_STATE state)
 }
 
 #ifdef DISABLE_THREADING
-gboolean
+int
 pyglib_enable_threads(void)
 {
     PyErr_SetString(PyExc_RuntimeError,
 		    "pyglib threading disabled at compile time");
-    return FALSE;
+    return -1;
 }
 #else
 /* Enable threading; note that the GIL must be held by the current
  * thread when this function is called
  */
-gboolean
+int
 pyglib_enable_threads(void)
 {
-    g_return_val_if_fail (_PyGLib_API != NULL, FALSE);
+    g_return_val_if_fail (_PyGLib_API != NULL, -1);
 
     if (_PyGLib_API->threads_enabled)
-	return TRUE;
+	return 0;
   
     PyEval_InitThreads();
     if (!g_threads_got_initialized)
@@ -145,7 +145,7 @@ pyglib_enable_threads(void)
     _PyGLib_API->threads_enabled = TRUE;
     pyglib_thread_state_tls_key = PyThread_create_key();
     
-    return TRUE;
+    return 0;
 }
 #endif
 
